test/libsolidity/syntaxTests/structs/recursion/return_recursive_structs.sol
contract C {
    struct S { uint a; S[] sub; }
    function f() public pure returns (uint, S memory) {
    }
}
// ----
// TypeError: (91-99): Recursive type not allowed for public or external contract functions.
